Эксперименты с различными GC[#107899]