@@ -8,15 +8,30 @@ import java.util.List;
  * When creating 500 objects (first createObjects(int objectsCount) method usage) GC do not work,
  * because 500 objects take only 63 kb of memory.
  * When creating 80000 objects, and free memory comes to end, GC starts up and destroys some objects.
+ *
+ * When set -XX:+UseSerialGC, GC do not start if 80000 objects created.
+ *
+ * When set -XX:+UseParallelGC, GC starts when invoke createObjects(80000) and then
+ * OutOfMemoryError occurs.
+ *
+ *When set -XX:+UseConcMarkSweepGC GC starts when invoke createObjects(80000) with no errors.
+ * Compiler issues a warning that Option UseConcMarkSweepGC was deprecated in version 9.0
+ *
+ *
+ *When set -XX:+UseG1GC, GC starts both in the first case and in the second.
  */
 
 
 public class Main {
     public static void main(String[] args) {
+        long startTime = System.currentTimeMillis();
 
         createObjects(500);
 
         createObjects(80000);
+
+        long endTime = System.currentTimeMillis();
+        printDuration(startTime, endTime);
     }
 
     private static long calculateFreeMemory() {
@@ -39,11 +54,14 @@ public class Main {
         long totalMemoryEngaged = freeMemoryStart - freeMemoryEnd;
         long memoryPerObject = totalMemoryEngaged / objectsCount;
 
+
+        System.out.println("Memory start: " +  freeMemoryStart + ", Memory end: " +  freeMemoryEnd);
         System.out.println("Total memory engaged: " +  totalMemoryEngaged);
         System.out.println("Memory Per Object: " +  memoryPerObject);
         System.out.println("------------");
     }
 
-
-
+    private static void printDuration(long start, long end) {
+        System.out.printf("Total executing time: %d ms.", (end - start));
+    }
 }
